--- a/events/src/app/customer-dashboard/customer-dashboard.component.html
+++ b/events/src/app/customer-dashboard/customer-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top: 30px;">
 
   <app-customer-dash-search></app-customer-dash-search>
 
