--- a/events/src/app/customer-dash-search/customer-dash-search.component.html
+++ b/events/src/app/customer-dash-search/customer-dash-search.component.html
@@ -72,6 +72,61 @@
             </div>
         </div>
       </div>
+
+       <div style="margin-top:20px;" class="row">
+          <div class="col-lg-12">    
+                  <h2 class="event_details_title">Price</h2>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col">
+                <div class="top_search_fields">
+                    <div>
+                            <p class="search_labels">Food</p>
+                            <mat-form-field>
+                                <mat-select placeholder="Food">
+                                <mat-option value="option">NYC</mat-option>
+                                <mat-option value="option">NJ</mat-option>
+                                <mat-option value="option">Conn</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                    </div>
+
+                    <div>
+                            <p class="search_labels">Drink</p>
+                            <mat-form-field>
+                                <mat-select placeholder="Drink">
+                                <mat-option value="option">NYC</mat-option>
+                                <mat-option value="option">NJ</mat-option>
+                                <mat-option value="option">Conn</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                    </div>
+                    <div>
+                            <p class="search_labels">Budget</p>
+                           
+                                <mat-slider #slider
+                                            (change)="sliderVal($event)"
+                                            [max]="max"
+                                            [min]="min"
+                                            [step]="step"
+                                            [value]="value"
+                                            >
+                                </mat-slider>
+                                {{"$ " + slider.value}}
+                            
+                    </div>
+                
+                
+                
+                
+                
+                </div>
+
+          </div>
+      </div>
+
+      
   
   
     </div>
