--- a/events/src/app/customer-dashboard/customer-dashboard.component.html
+++ b/events/src/app/customer-dashboard/customer-dashboard.component.html
@@ -1,5 +1,22 @@
 <div class="container" style="margin-top: 30px;">
-
-  <app-customer-dash-search></app-customer-dash-search>
+  <div class="row">
+    <div class="col">
+        <app-customer-dash-search></app-customer-dash-search>
+    </div>
+  </div>
+  <div style="margin-top: 30px;" class="row">
+    <div class="col">
+        <div><h2 style="font-size: 1.25rem;">We found 26 values for you</h2></div>
+    </div>
+  </div>
+  <div style="margin-top: 30px;" class="row">
+      <div class="col-8">
+         <app-customer-dash-results></app-customer-dash-results>
+      </div>
+      <div class="col-4">
+         <app-customer-dash-map></app-customer-dash-map>
+      </div>
+  </div>
+ 
 
 </div>
