--- a/events/src/app/customer-dash-results/customer-dash-results.component.html
+++ b/events/src/app/customer-dash-results/customer-dash-results.component.html
@@ -1,5 +1,5 @@
-<div class="row justify-content-center " style="margin-bottom: 50px;" >
-   <div class="col-sm-12 col-lg-6" *ngFor="let venue of venues">
+<div class="row">
+   <div style="margin-bottom: 50px;" class="col-sm-12 col-lg-6" *ngFor="let venue of venues">
         <venuecard [venueInfo]="venue"></venuecard>
     </div>
 </div> 
