--- a/events/src/app/featured-venues/featured-venues.component.html
+++ b/events/src/app/featured-venues/featured-venues.component.html
@@ -1,5 +1,5 @@
 <div class="row feature_header" >
-    <div class="col-6"><h2 class="featuredVenuesTitle">Featured venues</h2></div>
+    <div class="col-6"><h2 class="featuredVenuesTitle">Featured Venues</h2></div>
     <div class="col-6"><span class="seeMore">see all venues ></span></div>
 </div> 
 <!-- example -->
