added staff login

--- a/events/src/app/register/user-type/user-type.component.html
+++ b/events/src/app/register/user-type/user-type.component.html
@@ -8,6 +8,8 @@
           <!-- To be added later -->
           <!-- <li class="list-group-item">Corporate</li> -->
           <li class="list-group-item" routerLink ="/venue/login">Venue</li>
+
+          <li class="list-group-item" routerLink ="/staff/login">Staff</li>
         </ul>
   </div>
 </div>
