navigated to staff dash

--- a/events/src/app/register/user-type/staff/staff.component.html
+++ b/events/src/app/register/user-type/staff/staff.component.html
@@ -10,8 +10,8 @@
                     <input type="text" class="form-control" id="lastName" placeholder="Smith" formControlName="lastName">
                 </div>
                 <div class="form-group">
-                    <label for="venueName">Venue Name</label>
-                    <input type="text" class="form-control" id="venueName" placeholder="Fiorinos" formControlName="venueName">
+                    <label for="staffName">User Name</label>
+                    <input type="text" class="form-control" id="staffName" placeholder="Fiorinos" formControlName="staffName">
                 </div>
                 <div class="form-group">
                     <label for="streetAddress">Street Address</label>
