--- a/events/src/app/staff-login/staff-login.component.html
+++ b/events/src/app/staff-login/staff-login.component.html
@@ -28,7 +28,7 @@
                                       <span class="custom-control-description small">Remember me on this computer</span>
                                     </label>
                                 </div>
-                                <div style="display:flex;"> <div style="padding-top:10px; font-family: Avenir">need an account?</div> <div><a class="nav-link navItem" routerLink ="/register/venue" >Sign up</a></div> </div>
+                                <div style="display:flex;"> <div style="padding-top:10px; font-family: Avenir">need an account?</div> <div><a class="nav-link navItem" routerLink ="/register/staff" >Sign up</a></div> </div>
                                 
                                <button (click)="login()" type="button" class="float-right local_login_button">Login</button>
                             </form>
