--- a/events/src/app/nav-bar/nav-bar.component.html
+++ b/events/src/app/nav-bar/nav-bar.component.html
@@ -15,7 +15,7 @@
           <a class="nav-link navItem" href="#">NEW YORK + </a>
       </li>
       <li class="nav-item">
-            <a class="nav-link navItem" href="localhost:api/test">REASOURCES</a>
+            <a class="nav-link navItem" href="localhost:api/test">RESOURCES</a>
       </li>
       <ng-template #logout>
         <li>
