--- a/events/src/app/staff-dash-header/staff-dash-header.component.css
+++ b/events/src/app/staff-dash-header/staff-dash-header.component.css
@@ -6,11 +6,15 @@
     background-position: 50% 10%;
     width:60px;
     border-radius: 50%;
-    margin-top: 30px;
+    margin-top: 15px;
+    margin-left: 10px;
    
     border: 1px solid #fff;
     
 }
 .dash_header_container {
     display: flex;
+    color: white;
+    
+   
 }
