--- a/events/src/app/staff-dash-header/staff-dash-header.component.html
+++ b/events/src/app/staff-dash-header/staff-dash-header.component.html
@@ -3,8 +3,8 @@
 
       </div>
 
-      <div style="align-self: center; margin-top:30px;"> 
-        <span>hello, </span>  {{ staffInfo.firstName }}
+      <div style="align-self:center; margin-top:10px; margin-left:5px; font-family:Avenir;"> 
+          {{ staffInfo.firstName }} <span>{{ staffInfo.lastName}}</span>
       </div>
 
 </div>  
