--- a/events/src/app/venue-list/venue-list.component.html
+++ b/events/src/app/venue-list/venue-list.component.html
@@ -1,21 +1,7 @@
-<div style="width: 300px; margin-top: 50px; font-family:Avenir;">
-    <mat-toolbar> <h3>Venue List</h3></mat-toolbar> 
-  <mat-card>
-        <mat-card-header>
-            <i class="fa fa-search mag_glass" aria-hidden="true"></i>
-            <form class="example-form">
-                <mat-form-field class="example-full-width">
-                  <input matInput >
-                </mat-form-field>
-            </form>
-        </mat-card-header>
-      
-        
-        <mat-list>
-        
-              <mat-list-item class="venue_list" *ngFor="let venue of venues">{{ venue.venueName }} </mat-list-item>
-          
-        </mat-list>
-    
-      </mat-card>
-</div>
+
+
+<button mat-button [matMenuTriggerFor]="menu">{{ selected }}</button>
+<mat-menu #menu="matMenu">
+  <button *ngFor="let venue of venues" (click)="selectedVenue(venue.venueName)" mat-menu-item>{{ venue.venueName }}</button>
+ 
+</mat-menu>
