--- a/events/src/styles.css
+++ b/events/src/styles.css
@@ -2,6 +2,8 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import '~angular-calendar/css/angular-calendar.css';
+@import "~ng-pick-datetime/assets/style/picker.min.css";
+
 
 body,html { 
     height: 100%;
