--- a/events/src/app/nav-bar/nav-bar.component.html
+++ b/events/src/app/nav-bar/nav-bar.component.html
@@ -23,9 +23,9 @@
         </li>
       </ng-template>
     
-      <li class="nav-item" *ngIf="!isLogged.auth; else logout">
+      <!-- <li class="nav-item" *ngIf="!isLogged.auth; else logout"> -->
         <a class="nav-link navItem" routerLink ="/userType" >LOG IN</a>
-      </li>
+      <!-- </li> -->
       <li class="nav-item">
           <a class="nav-link navItem" href="#">LIST YOUR VENUE</a>
       </li>
