--- a/events/src/app/venue-list/venue-list.component.html
+++ b/events/src/app/venue-list/venue-list.component.html
@@ -2,6 +2,6 @@
 
 <button mat-button [matMenuTriggerFor]="menu">{{ selected }}</button>
 <mat-menu #menu="matMenu">
-  <button *ngFor="let venue of venues" (click)="selectedVenue(venue.venueName)" mat-menu-item>{{ venue.venueName }}</button>
+  <button *ngFor="let venue of venues" (click)="selectedVenue(venue.id, venue.venueName)" mat-menu-item>{{ venue.venueName }}</button>
  
 </mat-menu>
